--- a/about.html
+++ b/about.html
@@ -24,6 +24,48 @@
 </head>
 <body>
 
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+
+
+            <a class="navbar-brand" href="#">UNIVERSAL</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+
+            <div class="collapse navbar-collapse" id="mainNavbar">
+                <div class="d-flex justify-content-between w-100 align-items-center">
+
+
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item px-2">
+                            <a class="nav-link active" href="home.html">Home</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="about.html">About Us</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+
+
+                    <form class="d-flex" role="search">
+                        <input class="form-control form-control-sm me-2" type="search" placeholder="Search"
+                            aria-label="Search">
+                        <button class="btn btn-sm btn-outline-light" type="submit">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+                    </form>
+
+                </div>
+            </div>
+
+        </div>
+    </nav>
+
   <header class="hero-section">
     <p>All Your Favorite Books In One Place 📚</p>
     <h1>About Us</h1>
@@ -90,9 +132,56 @@
   </section>
 
   <footer>
-    &copy; 2025 EleBooks. All rights reserved.
-  </footer>
+        <div class="foot-div">
+            <div class="subdiv1 d-flex">
+                <div id="logo">
+                    <H5 class="text-dark">UNIVERSAL</H5>
+                </div>
+                <div class="subdiv2 ">
+                    <p class="text-dark">A book store where you you can find books of any period & any kind</p>
+                </div>
+            </div>
+            <div id="subdiv3">Provides our freight services to meet up with your transportation needs, professional
+                services to deliver your freight fast and safe to its final destination</div>
+            <div id="subdiv4">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-square-x-twitter"></i>
+            </div>
+        </div>
+        <div class="foot-div ps-5">
+            <h4 class="text">Services</h4>
+            <ul>
+                <li>Project Cargo</li>
+                <li>Shipping Agency </li>
+                <li>Used Container </li>
+                <li>Air Freight </li>
+                <li>Land Freight </li>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+            </ul>
+        </div>
+        <div class="foot-div">
+                <h4 class="text">Outlook</h4>
+            <ul>
+                <li>Shipment Tracking</li>
+                <li>Get a Quote </li>
+                <li>Offline Zone </li>
+                <li>Our assciates </li>
+                <li>News and Events </li>
+
+
+            </ul>
+        </div>
+        </div>
+        <div class="foot-div-spe">
+            <h5 class="text-dark">Get to know about Ocean Crown’s latest updates and all news, straight to your email.</h5>
+            <input class="form-control-sm foot-inp"  type="text" placeholder="EMAIL">
+        </div>
+
+    </footer>
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
