--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,49 @@
 </head>
 <body>
 
+     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+
+
+            <a class="navbar-brand" href="#">UNIVERSAL</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+
+            <div class="collapse navbar-collapse" id="mainNavbar">
+                <div class="d-flex justify-content-between w-100 align-items-center">
+
+
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item px-2">
+                            <a class="nav-link active" href="home.html">Home</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="about.html">About Us</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+
+
+                    <form class="d-flex" role="search">
+                        <input class="form-control form-control-sm me-2" type="search" placeholder="Search"
+                            aria-label="Search">
+                        <button class="btn btn-sm btn-outline-light" type="submit">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+                    </form>
+
+                </div>
+            </div>
+
+        </div>
+    </nav>
+
+
   <section class="contact-header text-center py-5">
     <h1>Contact Us</h1>
     <p>We'd love to hear from you! Reach out anytime 📬</p>
@@ -64,8 +107,7 @@
     </div>
   </section>
 
-  
-    <footer>
+  <footer>
         <div class="foot-div">
             <div class="subdiv1 d-flex">
                 <div id="logo">
@@ -115,6 +157,7 @@
 
     </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
 </body>
 </html>
